# crd-example

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
crds/: crd.yaml  resource.yaml
src/: m.py
src/provisioner/: config.py  errors.py  main.py
src/provisioner/schemas/: base.py  event_triggers.py
src/tests/unittest/: test_markdown_framework.py
