[tool.poetry]
name = "crd-example"
version = "0.1.0"
description = ""
authors = ["Hao-Wei <henry.li@pentium.network>"]
readme = "README.md"
packages = [{include = "crd_example"}]

[tool.poetry.dependencies]
python = "^3.11"
markdown = "3.4.3"
pydantic = "^1.10.9"
pytest = "^7.3.2"
parameterized = "^0.9.0"
pytest-asyncio = "^0.21.0"
kopf = "^1.36.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
