[tool.poetry]
name = "crd-example"
version = "0.1.0"
description = ""
authors = ["Hao-Wei <henry.li@pentium.network>"]
readme = "README.md"
packages = [{include = "crd_example"}]

[tool.poetry.dependencies]
python = "^3.11"
markdown = "3.4.3"
pydantic = "^1.10.9"
pytest = "^7.3.2"
parameterized = "^0.9.0"
pytest-asyncio = "^0.21.0"
kopf = "^1.36.1"
aiofiles = "^23.1.0"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
    .git
  | .venv
  | ^/data
  | ^/logs
)
'''

[tool.isort]
profile = "black"
line_length = 120
skip = [
    '.bzr',
    '.direnv',
    '.eggs',
    '.git',
    '.hg',
    '.mypy_cache',
    '.nox',
    '.pants.d',
    '.svn',
    '.tox',
    '.venv',
    '__pypackages__',
    '_build',
    'buck-out',
    'build',
    'dist',
    'node_modules',
    'venv',
    '__pycache__',
    './data',
    './logs',
]

[tool.mypy]
python_version = 3.11
warn_return_any = false
disallow_untyped_defs = true
exclude=[
  'migrations/*',
]

[[tool.mypy.overrides]]
module = [
  'cuid',
]
ignore_missing_imports = true
